Added persisntence to 1 principle

--- a/2 Open Close principle/C sharp/OpenClosePrinciple/OpenClosePrinciple/OpenClosePrinciple.csproj
+++ b/2 Open Close principle/C sharp/OpenClosePrinciple/OpenClosePrinciple/OpenClosePrinciple.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3588748F-5B16-45CE-964D-AF95254BF6AC}</ProjectGuid>
+    <ProjectGuid>{73A41759-5946-41B7-B42A-FA2A8F83BE03}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>OpenClosePrinciple</RootNamespace>
+    <AssemblyName>OpenClosePrinciple</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Agenda.cs" />
-    <Compile Include="Persistence.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
